// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-form> Component checkbox 1`] = `
<div class="c-bolt-input-list__item">
  <input type="checkbox"
         id="checkbox"
         name
         class="c-bolt-input c-bolt-input--checkbox"
  >
  <label for="checkbox"
         class="c-bolt-inline-label c-bolt-inline-label--checkbox"
  >
    Single Checkbox
  </label>
</div>
`;

exports[`<bolt-form> Component disabled input 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Don&#039;t try to edit this"
         disabled="disabled"
         type="text"
         class="c-bolt-input c-bolt-input--text"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <svg class="e-bolt-icon e-bolt-icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M27.9 27.2H4.2c-.8 0-1.4-.6-1.4-1.4 0-.2.1-.5.2-.7L14.8 5.4c.3-.4.7-.7 1.2-.7s.9.3 1.2.7L29 25.1c.1.2.2.5.2.7.1.8-.5 1.4-1.3 1.4zm3.6-3.5L19.6 4c-.8-1.3-2.1-2-3.6-2s-2.8.8-3.6 2L.6 23.7c-.4.7-.6 1.4-.6 2.1C0 28.1 1.9 30 4.1 30h23.8c2.3 0 4.1-1.9 4.1-4.2.1-.7-.1-1.4-.5-2.1z">
                </path>
                <path d="M16 10.5c-.8 0-1.4.6-1.4 1.4v5.6c0 .8.6 1.4 1.4 1.4s1.4-.6 1.4-1.4v-5.6c0-.8-.6-1.4-1.4-1.4M16 21.6c-.4 0-.7.1-1 .4s-.4.6-.4 1 .1.7.4 1 .6.4 1 .4.7-.1 1-.4.4-.6.4-1-.1-.7-.4-1c-.3-.2-.6-.4-1-.4">
                </path>
              </g>
            </svg>
          </div>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component input with inputAttribute "email" 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Enter email address"
         type="email"
         class="c-bolt-input c-bolt-input--email"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <svg class="e-bolt-icon e-bolt-icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M27.9 27.2H4.2c-.8 0-1.4-.6-1.4-1.4 0-.2.1-.5.2-.7L14.8 5.4c.3-.4.7-.7 1.2-.7s.9.3 1.2.7L29 25.1c.1.2.2.5.2.7.1.8-.5 1.4-1.3 1.4zm3.6-3.5L19.6 4c-.8-1.3-2.1-2-3.6-2s-2.8.8-3.6 2L.6 23.7c-.4.7-.6 1.4-.6 2.1C0 28.1 1.9 30 4.1 30h23.8c2.3 0 4.1-1.9 4.1-4.2.1-.7-.1-1.4-.5-2.1z">
                </path>
                <path d="M16 10.5c-.8 0-1.4.6-1.4 1.4v5.6c0 .8.6 1.4 1.4 1.4s1.4-.6 1.4-1.4v-5.6c0-.8-.6-1.4-1.4-1.4M16 21.6c-.4 0-.7.1-1 .4s-.4.6-.4 1 .1.7.4 1 .6.4 1 .4.7-.1 1-.4.4-.6.4-1-.1-.7-.4-1c-.3-.2-.6-.4-1-.4">
                </path>
              </g>
            </svg>
          </div>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component input with inputAttribute "number" 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Enter Pin Nmber"
         type="number"
         class="c-bolt-input c-bolt-input--number"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <svg class="e-bolt-icon e-bolt-icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M27.9 27.2H4.2c-.8 0-1.4-.6-1.4-1.4 0-.2.1-.5.2-.7L14.8 5.4c.3-.4.7-.7 1.2-.7s.9.3 1.2.7L29 25.1c.1.2.2.5.2.7.1.8-.5 1.4-1.3 1.4zm3.6-3.5L19.6 4c-.8-1.3-2.1-2-3.6-2s-2.8.8-3.6 2L.6 23.7c-.4.7-.6 1.4-.6 2.1C0 28.1 1.9 30 4.1 30h23.8c2.3 0 4.1-1.9 4.1-4.2.1-.7-.1-1.4-.5-2.1z">
                </path>
                <path d="M16 10.5c-.8 0-1.4.6-1.4 1.4v5.6c0 .8.6 1.4 1.4 1.4s1.4-.6 1.4-1.4v-5.6c0-.8-.6-1.4-1.4-1.4M16 21.6c-.4 0-.7.1-1 .4s-.4.6-.4 1 .1.7.4 1 .6.4 1 .4.7-.1 1-.4.4-.6.4-1-.1-.7-.4-1c-.3-.2-.6-.4-1-.4">
                </path>
              </g>
            </svg>
          </div>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component input with inputAttribute "password" 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Enter Password"
         type="password"
         class="c-bolt-input c-bolt-input--password"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <svg class="e-bolt-icon e-bolt-icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M27.9 27.2H4.2c-.8 0-1.4-.6-1.4-1.4 0-.2.1-.5.2-.7L14.8 5.4c.3-.4.7-.7 1.2-.7s.9.3 1.2.7L29 25.1c.1.2.2.5.2.7.1.8-.5 1.4-1.3 1.4zm3.6-3.5L19.6 4c-.8-1.3-2.1-2-3.6-2s-2.8.8-3.6 2L.6 23.7c-.4.7-.6 1.4-.6 2.1C0 28.1 1.9 30 4.1 30h23.8c2.3 0 4.1-1.9 4.1-4.2.1-.7-.1-1.4-.5-2.1z">
                </path>
                <path d="M16 10.5c-.8 0-1.4.6-1.4 1.4v5.6c0 .8.6 1.4 1.4 1.4s1.4-.6 1.4-1.4v-5.6c0-.8-.6-1.4-1.4-1.4M16 21.6c-.4 0-.7.1-1 .4s-.4.6-.4 1 .1.7.4 1 .6.4 1 .4.7-.1 1-.4.4-.6.4-1-.1-.7-.4-1c-.3-.2-.6-.4-1-.4">
                </path>
              </g>
            </svg>
          </div>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component input with inputAttribute "search" 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Enter Search Terms"
         type="search"
         class="c-bolt-input c-bolt-input--search"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <svg class="e-bolt-icon e-bolt-icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M27.9 27.2H4.2c-.8 0-1.4-.6-1.4-1.4 0-.2.1-.5.2-.7L14.8 5.4c.3-.4.7-.7 1.2-.7s.9.3 1.2.7L29 25.1c.1.2.2.5.2.7.1.8-.5 1.4-1.3 1.4zm3.6-3.5L19.6 4c-.8-1.3-2.1-2-3.6-2s-2.8.8-3.6 2L.6 23.7c-.4.7-.6 1.4-.6 2.1C0 28.1 1.9 30 4.1 30h23.8c2.3 0 4.1-1.9 4.1-4.2.1-.7-.1-1.4-.5-2.1z">
                </path>
                <path d="M16 10.5c-.8 0-1.4.6-1.4 1.4v5.6c0 .8.6 1.4 1.4 1.4s1.4-.6 1.4-1.4v-5.6c0-.8-.6-1.4-1.4-1.4M16 21.6c-.4 0-.7.1-1 .4s-.4.6-.4 1 .1.7.4 1 .6.4 1 .4.7-.1 1-.4.4-.6.4-1-.1-.7-.4-1c-.3-.2-.6-.4-1-.4">
                </path>
              </g>
            </svg>
          </div>
        </li>
        <li class="o-bolt-inline-list__item">
          <button class="c-bolt-input-icon c-bolt-input-icon--link"
                  type="submit"
          >
            <svg class="e-bolt-icon e-bolt-icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <path fill="#151619"
                    fill-rule="evenodd"
                    d="M12 20.9c-4.9 0-8.8-4-8.8-8.8 0-4.9 4-8.8 8.8-8.8s8.8 4 8.8 8.8c.1 4.8-3.9 8.8-8.8 8.8m19.5 8.4l-10-10c1.5-2 2.5-4.5 2.5-7.3 0-6.6-5.4-12-12-12S0 5.4 0 12s5.4 12 12 12c2.7 0 5.3-.9 7.3-2.5l10 10c.3.3.7.5 1.1.5s.8-.2 1.1-.5c.7-.6.7-1.6 0-2.2"
                    clip-rule="evenodd"
              >
              </path>
            </svg>
          </button>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component input with inputAttribute "tel" 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Enter Phone Number"
         type="tel"
         class="c-bolt-input c-bolt-input--tel"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <svg class="e-bolt-icon e-bolt-icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M27.9 27.2H4.2c-.8 0-1.4-.6-1.4-1.4 0-.2.1-.5.2-.7L14.8 5.4c.3-.4.7-.7 1.2-.7s.9.3 1.2.7L29 25.1c.1.2.2.5.2.7.1.8-.5 1.4-1.3 1.4zm3.6-3.5L19.6 4c-.8-1.3-2.1-2-3.6-2s-2.8.8-3.6 2L.6 23.7c-.4.7-.6 1.4-.6 2.1C0 28.1 1.9 30 4.1 30h23.8c2.3 0 4.1-1.9 4.1-4.2.1-.7-.1-1.4-.5-2.1z">
                </path>
                <path d="M16 10.5c-.8 0-1.4.6-1.4 1.4v5.6c0 .8.6 1.4 1.4 1.4s1.4-.6 1.4-1.4v-5.6c0-.8-.6-1.4-1.4-1.4M16 21.6c-.4 0-.7.1-1 .4s-.4.6-.4 1 .1.7.4 1 .6.4 1 .4.7-.1 1-.4.4-.6.4-1-.1-.7-.4-1c-.3-.2-.6-.4-1-.4">
                </path>
              </g>
            </svg>
          </div>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component input with inputAttribute "text" 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Enter a Title"
         type="text"
         class="c-bolt-input c-bolt-input--text"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <svg class="e-bolt-icon e-bolt-icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M27.9 27.2H4.2c-.8 0-1.4-.6-1.4-1.4 0-.2.1-.5.2-.7L14.8 5.4c.3-.4.7-.7 1.2-.7s.9.3 1.2.7L29 25.1c.1.2.2.5.2.7.1.8-.5 1.4-1.3 1.4zm3.6-3.5L19.6 4c-.8-1.3-2.1-2-3.6-2s-2.8.8-3.6 2L.6 23.7c-.4.7-.6 1.4-.6 2.1C0 28.1 1.9 30 4.1 30h23.8c2.3 0 4.1-1.9 4.1-4.2.1-.7-.1-1.4-.5-2.1z">
                </path>
                <path d="M16 10.5c-.8 0-1.4.6-1.4 1.4v5.6c0 .8.6 1.4 1.4 1.4s1.4-.6 1.4-1.4v-5.6c0-.8-.6-1.4-1.4-1.4M16 21.6c-.4 0-.7.1-1 .4s-.4.6-.4 1 .1.7.4 1 .6.4 1 .4.7-.1 1-.4.4-.6.4-1-.1-.7-.4-1c-.3-.2-.6-.4-1-.4">
                </path>
              </g>
            </svg>
          </div>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component radio button 1`] = `
<div class="c-bolt-input-list__item">
  <input type="radio"
         id="radio"
         name
         class="c-bolt-input c-bolt-input--radio"
  >
  <label for="radio"
         class="c-bolt-inline-label c-bolt-inline-label--radio"
  >
    Single Radio
  </label>
</div>
`;

exports[`<bolt-form> Component selection list 1`] = `
<select class="c-bolt-input c-bolt-input--select">
  <option value>
    - Select an option -
  </option>
  <option value="option-a">
    Option A
  </option>
  <option value="option-b">
    Option B
  </option>
</select>
<div class="c-bolt-input-icons">
  <bolt-input-icons>
    <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
      <li class="o-bolt-inline-list__item">
        <div class="c-bolt-input-icon--invalid">
          <svg class="e-bolt-icon e-bolt-icon--medium"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 32 32"
               aria-hidden="true"
          >
            <g fill="#151619"
               fill-rule="evenodd"
               clip-rule="evenodd"
            >
              <path d="M27.9 27.2H4.2c-.8 0-1.4-.6-1.4-1.4 0-.2.1-.5.2-.7L14.8 5.4c.3-.4.7-.7 1.2-.7s.9.3 1.2.7L29 25.1c.1.2.2.5.2.7.1.8-.5 1.4-1.3 1.4zm3.6-3.5L19.6 4c-.8-1.3-2.1-2-3.6-2s-2.8.8-3.6 2L.6 23.7c-.4.7-.6 1.4-.6 2.1C0 28.1 1.9 30 4.1 30h23.8c2.3 0 4.1-1.9 4.1-4.2.1-.7-.1-1.4-.5-2.1z">
              </path>
              <path d="M16 10.5c-.8 0-1.4.6-1.4 1.4v5.6c0 .8.6 1.4 1.4 1.4s1.4-.6 1.4-1.4v-5.6c0-.8-.6-1.4-1.4-1.4M16 21.6c-.4 0-.7.1-1 .4s-.4.6-.4 1 .1.7.4 1 .6.4 1 .4.7-.1 1-.4.4-.6.4-1-.1-.7-.4-1c-.3-.2-.6-.4-1-.4">
              </path>
            </g>
          </svg>
        </div>
      </li>
      <li class="o-bolt-inline-list__item">
        <div class="c-bolt-input-icon">
          <svg class="e-bolt-icon e-bolt-icon--medium"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 32 32"
               aria-hidden="true"
          >
            <path fill="#151619"
                  fill-rule="evenodd"
                  d="M26.6 12.4c.6-.6.6-1.6 0-2.2s-1.6-.6-2.2 0L16 18.5l-8.3-8.4c-.6-.6-1.6-.6-2.2 0-.3.4-.5.8-.5 1.2s.2.8.5 1.1l9.4 9.4c.6.6 1.6.6 2.2 0z"
                  clip-rule="evenodd"
            >
            </path>
          </svg>
        </div>
      </li>
    </ul>
  </bolt-input-icons>
</div>
`;

exports[`<bolt-form> Component textarea 1`] = `
<div class="c-bolt-input-list__item">
  <textarea placeholder="Describe the job"
            required
            class="c-bolt-input"
  >
  </textarea>
  <label class="c-bolt-floating-label">
    Job Description
  </label>
</div>
`;
